Polish mcp-client

--- a/mcp-client/src/main/resources/templates/page-templates.html
+++ b/mcp-client/src/main/resources/templates/page-templates.html
@@ -25,7 +25,7 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="/authorize?grant_type=authorization_code" th:href="@{/authorize?grant_type=authorization_code}">Authorization Code</a></li>
                         <li><a class="dropdown-item" href="/authorize?grant_type=client_credentials" th:href="@{/authorize?grant_type=client_credentials}">Client Credentials</a></li>
-                        <li><a class="dropdown-item" href="/mcp" th:href="@{/mcp}">MCP Authorization</a></li>
+                        <li><a class="dropdown-item" href="/mcp" th:href="@{/mcp}">MCP Authorization Flow</a></li>
                     </ul>
                 </li>
             </ul>
